--- a/style.css
+++ b/style.css
@@ -1,24 +1,322 @@
-/*----------------------------------------------------------------------------------------CONNEXION----------------------------*/
-*{
-    margin: 0;
-    padding: 0;
+ 
+ /* ------------------------------------------------------------------------------BODY DU SITE------------------------------------------------------------------------------*/
+ body{
+     margin: 0;
+     padding: 0;
+     list-style: none;
+ }
+
+ /* ------------------------------------------------------------------------------TOUS LES LIENS------------------------------------------------------------------------------*/
+ a{
+    text-decoration: none;
+ }
+
+/* ------------------------------------------------------------------------------PAGE DU SITE------------------------------------------------------------------------------*/
+ #page{
+    width: 95%; 
+   margin: auto;
 }
-#headerconnexion{
+
+/* ------------------------------------------------------------------------------HEADER DE TOUTES LES PAGES------------------------------------------------------------------------------*/
+ .header{
+    padding-bottom: 20px;
+    background-color: #0c0c0cc2;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+}
+
+ .header img{
+     border: 1px black solid;
+      height: 110px;  
+     width: 110px;
+     border-radius: 30px;
+     /* box-shadow: 10px 5px 5px red; */
+     background-color: white;
+     margin: 20px 0  0 20px;
+ }
+
+
+
+ /* ------------------------------------------------------------------------------FOOTER DE TOUTES LES PAGES------------------------------------------------------------------------------*/
+footer{
+    background-color: #0c0c0cc2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px; 
+}
+
+footer p {
+    font-size: 20px;
+    border-left: 2px white solid;
+    margin: 0 5px 0 5px;
+    color: white; 
+   /* padding: 5px; */
+   padding: 0 10px 0 10px; 
+}
+
+#contactfooter{
+    border-right: 2px white solid;
+    padding-right: 10px;
+}
+
+ /* ------------------------------------------------------------------------------PAGE DE CONNEXION ------------------------------------------------------------------------------*/
+ .conteneur-formulaire-connexion-inscription{
+    margin: 200px auto;
     text-align: center;
-    background-color: pink;
+    border-radius: 30px;
+    box-shadow: 12px 12px 12px 12px rgba(255, 0, 0, 0.993); 
+    padding: 20px 20px; 
+    width: 600px;
+    background-color: white;
+} 
+
+.formulaire-connexion-inscription p {
+    border-bottom: 1px red solid;
+    padding-bottom: 15px;
+    
+}
+
+.formulaire-connexion-inscription input{
+    margin:  auto; 
+    text-align: center;
+    padding: 15px;  
+    border-radius: 24px;
+}
+
+.boutton-connexion{
+    color: white;
+    background-color: red;
+    opacity: 0.8;
+    border: none;
+}
+
+.boutton-connexion:hover{
+    background-color:rgba(255, 16, 16, 0.925);
+}
+
+#mdp-oublie:hover{
+    color:rgba(255, 16, 16, 0.925);
+}
+
+ /* ------------------------------------------------------------------------------PAGE D'INSCRIPTION ------------------------------------------------------------------------------*/
+
+ .label-menu{
+    font-size: 25px;
+    margin: auto;
+ }
+ /* ------------------------------------------------------------------------------PAGE DE ACCUEIL ------------------------------------------------------------------------------*/
+
+#menu{
+    align-items: center;
+    display: flex;
+}
+
+#menu a{
+   display: flex;
+   margin-left: 35px;
+   /* background-color: red; */
+   color: white; 
+}
+
+.icone-profil{
+    font-size: 40px;
+    margin-right: 20px;   
+}
+
+#menu p{
+    font-size: 30px;
+    margin: 0;
+ }
+
+.icone-deconnexion{
+    font-size: 40px;
+    margin-right: 20px;
+}
+
+#conteneur-partenaires{
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;  
+    padding: 15px 15px 1px 10px;
+}
+#conteneur-partenaires h2{
+    text-align: center;
+    margin-bottom: 30px;
+}
+#presentation{
+    text-align: center;
+    margin: auto;
+    margin-bottom: 50px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;  
+}
+
+#presentation h1{
+    padding-top: 20px;
+    font-size: 35px;
+}
+
+#presentation h3{
+    font-size: 25px;
+}
+
+#presentation p{
+    font-size: 20px;
+}
+
+ #presentation img{
+   width: 95%;
+   margin-bottom: 10px;
+} 
+
+.partenaires{
+    display: flex;  
+    height: 200px;
+    position: relative;
+    margin-bottom: 30px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.partenaires img{
+     height: 130px;
+     width: 300px;
+     padding-right: 30px;
+     padding-left: 30px;
+     margin: 35px auto;
+     align-items: center; 
+}
+
+.partenaires h3{
+    font-size: 30px;
+}
+
+.partenaires p{
+    font-size: 20px;
+}
+
+.buttonpartenaires{
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+
+    color: white;
+    background-color: red;
+    opacity: 0.8;
+    border: none;
+    padding: 15px;  
+    border-radius: 24px;
+} 
+
+/* ------------------------------------------------------------------------------PAGE DE PROFIL ------------------------------------------------------------------------------*/
+.icone-page-profil{
+    font-size: 60px;
+    padding: 10px 0 10px 20px;
+    /* margin-right: 200px; */
+    /* background-color: red; */
+}
+#nom-du-profil{
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;  
+    width: 50%;
+    height: 150px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    margin-top: 100px;
+}
+
+#nom-du-profil h2{
+    margin-left: 20px;
+}
+
+.a-propos-de-moi{
+    align-items: center;
+    margin: auto;
+    padding-top: 10px;
+    /* margin-top: 20px; */
+    padding-bottom: 30px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;  
+    width: 50%;
+    height: 150px; 
+}
+ .a-propos-de-moi h2{
+    margin-left: 20px;
+} 
+
+.a-propos-de-moi p{
+    margin-left: 20px;
+}
+
+#button-profil{
+    display: flex;
+    justify-content: space-around;
+    padding: 40px 0 40px 0;
+}
+#button-page-de-profil{
+    right: 20px;
+    bottom: 20px;
+    color: white;
+    background-color: red;
+    opacity: 0.8;
+    border: none;
+    padding: 15px;  
+    border-radius: 24px;
+  
+}
+
+#button-profil a :hover{
+    background-color:rgba(255, 16, 16, 0.925);
+}
+
+
+/* ------------------------------------------------------------------------------PAGE DE MODIFICATION DE PROFIL ------------------------------------------------------------------------------*/
+#page-modification{
+    background-color: red;
+    
+   
    
 }
-#headerconnexion img{
-    height: 200px;
-}
 
-#headerconnexion p{
-    font-size: 20px;
-padding-bottom: 15px;
-border-bottom: 1px solid black;
-}
-
-#formulaireconnexion{
+#page-modification h1{
+    padding: 15px 0 15px 0;
     text-align: center;
-    padding-top: 50px;
+    color: white;
+    /* vertical-align; */
+    margin: auto;
+   
 }
+
+
+#conteneur-formulaire-modification{
+    margin: 200px auto;
+    text-align: center;
+    border-radius: 30px;
+    box-shadow: 12px 12px 12px 12px rgba(255, 0, 0, 0.993); 
+    padding: 20px 20px; 
+    width: 600px;
+    background-color: white;
+}
+
+#formulaire-modification input{
+    margin:  auto; 
+    text-align: center;
+    padding: 15px;  
+    border-radius: 24px;
+  
+    
+}
+
+.label-formulaire-modification{
+    font-size: 20px;
+}
+#test{
+    padding-top: 20px;
+}
+#button-modification{
+    margin-top: 50px;
+    color: white;
+    background-color: red;
+    opacity: 0.8;
+    border: none;
+    
+}
+
+
