--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,12 @@
  
  /* ------------------------------------------------------------------------------BODY DU SITE------------------------------------------------------------------------------*/
- body{
-     margin: 0;
-     padding: 0;
-     list-style: none;
+ *{
+    margin: 0;
+    padding: 0;
  }
+ 
+ 
+ 
 
  /* ------------------------------------------------------------------------------TOUS LES LIENS------------------------------------------------------------------------------*/
  a{
@@ -33,7 +35,6 @@
       height: 110px;  
      width: 110px;
      border-radius: 30px;
-     /* box-shadow: 10px 5px 5px red; */
      background-color: white;
      margin: 20px 0  0 20px;
  }
@@ -88,7 +89,6 @@ footer p {
     border-left: 2px white solid;
     margin: 0 5px 0 5px;
     color: white; 
-   /* padding: 5px; */
    padding: 0 10px 0 10px; 
 }
 
@@ -106,7 +106,6 @@ footer p {
  #boutton-verification-compte{
     color: white;
     background-color: red;
-    /* margin-top: 300px; */
     opacity: 0.8;
     width: 450px;
     border: none;
@@ -125,7 +124,6 @@ footer p {
 #menu a{
    display: flex;
    margin-left: 35px;
-   /* background-color: red; */
    color: white; 
 }
 
@@ -160,7 +158,9 @@ footer p {
 #presentation{
     text-align: center;
     margin: auto;
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
+    margin: 50px 0 50px 0;
+    /* margin-top: 50px; */
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;  
 }
 
@@ -186,7 +186,9 @@ footer p {
     display: flex;  
     height: 200px;
     position: relative;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px;
+    margin-top: 30px; */
+    margin: 30px 0 30px 0;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
@@ -199,15 +201,15 @@ footer p {
      align-items: center; 
 }
 
-.partenaires h3{
+.partenaires h2{
     font-size: 30px;
+    margin-top: 20px;
 }
 
 .buttonpartenaires{
     position: absolute;
     right: 20px;
     bottom: 20px;
-
     color: white;
     background-color: red;
     opacity: 0.8;
@@ -220,8 +222,7 @@ footer p {
 .icone-page-profil{
     font-size: 60px;
     padding: 10px 0 10px 20px;
-    /* margin-right: 200px; */
-    /* background-color: red; */
+ 
 }
 #nom-du-profil{
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;  
@@ -241,18 +242,22 @@ footer p {
     align-items: center;
     margin: auto;
     padding-top: 10px;
-    /* margin-top: 20px; */
     padding-bottom: 30px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;  
     width: 50%;
     height: 150px; 
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
  .a-propos-de-moi h2{
     margin-left: 20px;
+    margin-bottom: 20px;
 } 
 
 .a-propos-de-moi p{
+    font-size: 18px;
     margin-left: 20px;
+    margin-bottom: 10px;
 }
 
 #button-profil{
@@ -308,9 +313,7 @@ footer p {
     margin:  auto; 
     text-align: center;
     padding: 15px;  
-    border-radius: 24px;
-  
-    
+    border-radius: 24px;   
 }
 
 .label-formulaire-modification{
@@ -323,35 +326,19 @@ footer p {
     background-color: red;
     opacity: 0.8;
     border: none;
-    
 }
-
 /* ------------------------------------------------------------------------------PAGE DES PARTENAIRES------------------------------------------------------------------------------*/
-/* .conteneur-commentaire{
-   text-align: center;
-   width: 95%;
-   margin: auto;
-} */
-
-.section_formulaire{
-    margin-bottom: 50px;
-}
-.conteneur-page-partenaires{
+/* ------------------------------------------------------------------------------PRESENTATION DES PARTENAIRES------------------------------------------------------------------------------*/
+    .conteneur-page-partenaires{
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;  
     padding: 15px 15px 5px 15px;
-    /* margin-bottom: 50px; */
     align-items: center;
     margin-top: 30px;
-    
-
-    
     }
 
     .conteneur-image-partenaires{
         text-align: center;
     }
-
-    
 
     .conteneur-page-partenaires h2{
         text-align: center;
@@ -362,14 +349,17 @@ footer p {
         text-align: center;
      
     }
-    .conteneur-page-partenaires li {
-        font-size: 25px;
 
+  
+
+/* ------------------------------------------------------------------------------SECTION DE COMMENTAIRE------------------------------------------------------------------------------*/
+    .section_formulaire{
+    margin-bottom: 50px;
     }
+
     .conteneur-commentaire{
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;  
         padding: 15px 15px 5px 15px;
-        /* margin-bottom: 50px; */
         align-items: center;
         margin-top: 30px;
         
@@ -382,9 +372,7 @@ footer p {
 
     .conteneur-commentaire-like{
         display: flex;
-        /* background-color: red; */
         justify-content: space-between;
-        /* text-align: center; */
         align-items: center;
         width: 95%;
         margin: auto;
@@ -393,64 +381,208 @@ footer p {
     .conteneur-commentaire-like p{
         font-size: 40px;
     }
-
+         /* -----------------------BOUTTON DE NOUVEAU COMMENTAIRE ET LIKES/DISLIKES-----------------------*/
     .bouton_commentaires_like{
         display:flex;
-       
-
     }
 
-   
     .nouveau_commentaire{
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;  
         padding: 25px 25px 25px 25px;
-      
         align-items: center;
         margin-top: 30px;
         margin-right: 30px;
         border-radius: 24px;
     }
-    .likes{
-        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;  
-        padding: 35px;
-        margin-top: 30px;
-        border-radius: 24px;
-        width: 110px;
-       display: flex;
-       justify-content: space-around;
-    }
 
-    .likes i{
-       font-size: 35px;
-    }
     .bouton_commentaires{
         color: white;
         background-color: black;
         opacity: 0.8;
-        border: none;
-       
-       
-        
-        
+        border: none;    
     }
+
+          /* -----------------------LIKES-----------------------*/
+    .likes{
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;  
+    padding: 35px;
+    margin-top: 30px;
+    border-radius: 24px;
+    width: 200px;
+    display: flex;
+    justify-content: space-between;
+    }
+
+    .likes i{
+    font-size: 35px;
+    }
+    .likes_commentaires{
+        color: blue;
+    }
+    
+    .dislikes_commentaires {
+        color: red;
+    }
+    .numero-like-dislike{
+        font-size: 25px;
+    }
+        /* -----------------------COMMENTAIRES-----------------------*/
+    .commentaires {
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;  
+        padding: 35px;
+        margin-top: 30px;
+        border-radius: 24px;
+        width: 90%;
+        margin: auto;
+        margin-top: 20px;    
+    }
+
+    .commentaires h3{
+       font-size: 30px;
+    }
+
+    .commentaires label {
+        font-size: 20px;
+    }
+
+    .commentaires p {
+        font-size: 20px;
+    }
+
+         
+ /* ------------------------------------------------------------------------------   FORMULAIRE ------------------------------------------------------------------------------*/
+   
+    .conteneur-form-commentaire{
+        text-align: center;
+    }
+  
 
     .form-commentaire{
         width: 95%;
-        
+        margin-top: 30px;
         height: 200px;
        align-items: center;
     }
 
-    .conteneur-form-commentaire{
-        text-align: center;
-    }
-
+    
     .submit-form{
         color: white;
         background-color: black;
         opacity: 0.8;
         border: none;
-       
     }
 
+
+/* ------------------------------------------------------------------------------  RESPONSIVE, MOBILE ------------------------------------------------------------------------------*/
+/* @media screen and (min-width: 320px) and (max-width: 680px)  { 
+ 
+    .header{
+        padding-bottom: 20px;
    
+       
+       
+    }
+    
+    #page {
+        width: 95%;
+    }
+    
+    #presentation{
+        text-align: center;
+        margin: auto;
+        width: 563px;
+        margin-bottom: 50px; 
+    }
+    
+    #presentation h1{
+        padding-top: 20px;
+        font-size: 35px;
+    }
+    
+    #presentation p{
+        text-align: center;
+    }
+    
+    #presentation h3{
+        font-size: 28px;
+    }
+    
+    
+    #conteneur-partenaires{
+        width: 535px;
+    }
+    
+    #conteneur-partenaires h2{
+        font-size: 30px;
+    }
+    
+    #conteneur-partenaires p{
+        font-size: 25px;
+        text-align: center;
+    }
+    
+    .buttonpartenaires {
+        padding: 20px;
+        font-size: 20px;
+    }
+    
+    
+    .partenaires {
+        background-color: white;
+        height: 345px;  
+        padding-right: 10px;
+    }
+    
+    .partenaires img {
+        height: 160px;
+        width: 250px;
+        margin: 15% auto;
+    }
+    
+    
+    .partenaires p {
+      font-size: 10px;
+    }
+    
+    
+     .conteneur-formulaire{
+        margin: 200px auto;
+        text-align: center;
+        border-radius: 30px;
+        box-shadow: 12px 12px 12px 12px rgba(255, 0, 0, 0.993); 
+        padding: 20px 20px; 
+        width: 290px;
+        background-color: white;    
+    }
+    
+    .formulaire input{
+        margin:  auto; 
+        text-align: center;
+        padding: 15px;  
+        width: 167px;
+        border-radius: 24px;
+        margin-bottom: 10px;
+    }
+    
+    
+    #boutton-verification-compte{
+        width: 250px;  
+     }
+    
+    footer{
+        width: 100%;
+      
+     }
+    
+    
+     .conteneur-image-partenaires img {
+         width: 500px;
+     }
+    
+    
+     
+    
+    
+    
+     
+    } */
